Bug 51020 - bento-fix/maintainer-update: multimedia/transcode pkg-plist
Summary: bento-fix/maintainer-update: multimedia/transcode pkg-plist
Status: Closed FIXED
Alias: None
Product: Ports & Packages
Classification: Unclassified
Component: Individual Port(s) (show other bugs)
Version: Latest
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-ports-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-04-16 10:20 UTC by hendrik
Modified: 2013-08-28 06:10 UTC (History)
1 user (show)

See Also:


Attachments
transcode-0.6.4-xvid.patch (612 bytes, patch)
2003-04-16 10:20 UTC, hendrik
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description hendrik 2003-04-16 10:20:03 UTC
This fixes a plist problem reported by Kris/bento:
http://bento.freebsd.org/errorlogs/i386-4-latest/transcode-0.6.4.log
Comment 1 Tilman Keskinoz freebsd_committer freebsd_triage 2003-04-16 11:09:04 UTC
State Changed
From-To: open->closed

committed, thanks
Comment 2 dfilter service freebsd_committer freebsd_triage 2013-08-28 06:05:19 UTC
Author: ohauer
Date: Wed Aug 28 05:05:06 2013
New Revision: 325503
URL: http://svnweb.freebsd.org/changeset/ports/325503

Log:
  - update to version 2.3.7
  - remove vhost fix [1]
  - change maintainer to submitter
  
   Changes with mod_fcgid 2.3.7
    o Periodically clean out the brigades which are pulling in the request
      body for handoff to the fcgid child. PR: 51749
      [Dominic Benson <dominic.benson thirdlight.com>]
  
    o Resolve crash during graceful restarts. PR 50309
      [Mario Brandt <JBlond gmail.com>]
  
    o Solve latency/cogestion of resolving effective user file access rights
      when no such info is desired, for config related filename stats.
      PR: 51020 [Thangaraj AntonyCrouse <thangaraj gmail.com>, William Rowe]
  
    o Fix regression in 2.3.6 which broke process controls when using vhost-
      specific configuration.  [Jeff Trawick] [1]
  
    o Account for first process in class in the spawn score.  [Jeff Trawick]
  
  [1] patch r267014
  
  PR:		ports/181265
  Submitted by:	Fabiano Sidler <freebsd.ports@webstyle.ch>
  Approved by:	Tolbert Josh <hemi@puresimplicity.net> (maintainer timeout, 14+ days)

Deleted:
  head/www/mod_fcgid/files/patch-modules-fcgid-fcgid_spawn_ctl.c
Modified:
  head/www/mod_fcgid/Makefile
  head/www/mod_fcgid/distinfo

Modified: head/www/mod_fcgid/Makefile
==============================================================================
--- head/www/mod_fcgid/Makefile	Wed Aug 28 04:10:40 2013	(r325502)
+++ head/www/mod_fcgid/Makefile	Wed Aug 28 05:05:06 2013	(r325503)
@@ -2,16 +2,15 @@
 # $FreeBSD$
 
 PORTNAME=	mod_fcgid
-PORTVERSION=	2.3.6
-PORTREVISION=	1
+PORTVERSION=	2.3.7
 CATEGORIES=	www
 MASTER_SITES=		${MASTER_SITE_APACHE_HTTPD}
 MASTER_SITE_SUBDIR=	${PORTNAME}
 PKGNAMEPREFIX=	${APACHE_PKGNAMEPREFIX}
+DIST_SUBDIR=	apache2
 
-MAINTAINER=	hemi@puresimplicity.net
-COMMENT=	An alternative FastCGI module for Apache2
-
+MAINTAINER=	freebsd.ports@webstyle.ch
+COMMENT=	Alternative FastCGI module for Apache2
 
 USE_APACHE=	22+
 

Modified: head/www/mod_fcgid/distinfo
==============================================================================
--- head/www/mod_fcgid/distinfo	Wed Aug 28 04:10:40 2013	(r325502)
+++ head/www/mod_fcgid/distinfo	Wed Aug 28 05:05:06 2013	(r325503)
@@ -1,2 +1,2 @@
-SHA256 (mod_fcgid-2.3.6.tar.gz) = e831795498d91cf27a519ea1332c2a92a2a9920b0844d817b2ea7f079056d12b
-SIZE (mod_fcgid-2.3.6.tar.gz) = 101883
+SHA256 (apache2/mod_fcgid-2.3.7.tar.gz) = b72810cb34942945156f29ce60946da7dc941bb4cfca8b9d224573535bd8ef6d
+SIZE (apache2/mod_fcgid-2.3.7.tar.gz) = 104818
_______________________________________________
svn-ports-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-ports-all
To unsubscribe, send any mail to "svn-ports-all-unsubscribe@freebsd.org"