Solve latency/cogestion of resolving effective user file access rights when no such info is desired, for config related filename stats.

PR: 51020, also 51560
Submitted by: Thangaraj AntonyCrouse <thangaraj gmail.com>, wrowe


git-svn-id: https://svn.apache.org/repos/asf/httpd/mod_fcgid/trunk@1213454 13f79535-47bb-0310-9956-ffa450edef68